--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script type="text/javascript" src="lib/jasmine-2.0.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/javabuzz.js"></script>
+  <script type="text/javascript" src="src/javabuzz4.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/javabuzzSpec.js"></script>
+  <script type="text/javascript" src="spec/javabuzzSpec4.js"></script>
 
 </head>
 
